--- a/Medizinplattform/WebContent/templates/custom_template.xhtml
+++ b/Medizinplattform/WebContent/templates/custom_template.xhtml
@@ -11,7 +11,7 @@
 
 <div id="header">
     <ui:insert name="header">
-    	Header area.  See comments below this line in the source.
+    	Header area.  See comments below this line in the source. Balh.
     	<!--  include your header file or uncomment the include below and create header.xhtml in this directory -->
     	<!-- <ui:include src="header.xhtml"/> -->
     </ui:insert>
@@ -20,7 +20,7 @@
 
 <div id="content">
   <ui:insert name="content">
-    	Content area.  See comments below this line in the source.
+    	Content area.  Sefafafe comments below this line in the source.
     	<!--  include your content file or uncomment the include below and create content.xhtml in this directory -->
 	  	<!-- <div> -->
     	<!-- <ui:include src="content.xhtml"/> -->  
