--- a/Medizinplattform/WebContent/templates/header.xhtml
+++ b/Medizinplattform/WebContent/templates/header.xhtml
@@ -1,7 +1,25 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+	  xmlns:h="http://java.sun.com/jsf/html"
+	  xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 <body>
-<div style="width:100%;font-size:36px;line-height:48px;background-color:navy;color:white">My Facelet Application</div>
+	<div>
+		<h:form>
+
+			<h:panelGrid columns="4" cellpadding="5">
+				<h:outputLabel for="name" value="Name:" style="font-weight:bold" />
+
+				<p:inputText id="name" value="#{pprBean.firstname}" />
+
+				<p:commandButton value="Submit" update="display" />
+
+				<h:outputText value="#{pprBean.firstname}" id="display" />
+			</h:panelGrid>
+
+		</h:form>
+	</div>
 </body>
 </html>
