--- a/Medizinplattform/WebContent/templates/header_with_forms.xhtml
+++ b/Medizinplattform/WebContent/templates/header_with_forms.xhtml
@@ -8,18 +8,12 @@
 <body>
 	<div>
 		<h:form>
-
-			<h:panelGrid columns="4" cellpadding="5">
-				<h:outputLabel for="name" value="Name:" style="font-weight:bold" />
-
-				<p:inputText id="name" value="#{pprBean.firstname}" />
-
-				<p:commandButton value="Submit" update="display" />
-
-				<h:outputText value="#{pprBean.firstname}" id="display" />
-			</h:panelGrid>
-
-		</h:form>
+            <h:outputText value="Login"></h:outputText>
+			<h:inputText value="#{headerBean.name}"></h:inputText>
+			<h:outputText value="Password"></h:outputText>
+			<h:inputSecret value="#{headerBean.password}"></h:inputSecret>
+			<h:commandButton value="Login" action="#{headerBean.check()}"></h:commandButton>
+        </h:form>
 	</div>
 </body>
 </html>
