add logout link

--- a/Medizinplattform/WebContent/templates/header_with_forms.xhtml
+++ b/Medizinplattform/WebContent/templates/header_with_forms.xhtml
@@ -12,7 +12,7 @@
 			<h:inputText value="#{headerBean.name}"></h:inputText>
 			<h:outputText value="Password"></h:outputText>
 			<h:inputSecret value="#{headerBean.password}"></h:inputSecret>
-			<h:commandButton value="Login" action="#{headerBean.check()}"></h:commandButton>
+			<h:commandButton value="Login" action="#{headerBean.login()}"></h:commandButton>
         </h:form>
 	</div>
 </body>
