--- a/Medizinplattform/WebContent/templates/header_with_forms.xhtml
+++ b/Medizinplattform/WebContent/templates/header_with_forms.xhtml
@@ -13,6 +13,7 @@
 			<h:outputText value="Password"></h:outputText>
 			<h:inputSecret value="#{headerBean.password}"></h:inputSecret>
 			<h:commandButton value="Login" action="#{headerBean.login()}"></h:commandButton>
+			<h:commandLink value="register" action="register"></h:commandLink>
         </h:form>
 	</div>
 </body>
