--- a/Medizinplattform/WebContent/templates/header_with_forms.xhtml
+++ b/Medizinplattform/WebContent/templates/header_with_forms.xhtml
@@ -6,7 +6,7 @@
 	  xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 <body>
-	<div>
+	<div style="width:100%;font-size:36px;line-height:48px;background-color:#B0B0B0 ;color:black">
 		<h:form>
             <h:outputText value="Login"></h:outputText>
 			<h:inputText value="#{headerBean.name}"></h:inputText>
