--- a/Medizinplattform/WebContent/templates/header_with_name.xhtml
+++ b/Medizinplattform/WebContent/templates/header_with_name.xhtml
@@ -6,11 +6,19 @@
 	  xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 <body>
-	<div style="width:100%;font-size:36px;line-height:48px;background-color:#B0B0B0 ;color:black">
-		<h:form>
-		<h:outputText value="Hey #{headerBean.name}"></h:outputText>
-		<h:commandLink value="log out" action="#{headerBean.logout()}"></h:commandLink>
-		</h:form>
+	<div style="width:100%;font-size:12px;line-height:30px;background-color:#E8E8E8  ;color:black">
+		
+		<span style="float:left;font-size:26px">
+			<h:link value="MediPlatt" outcome="index.xhtml"></h:link>
+		</span>
+		
+		<span style="text-align:right;font-size:20px;color:black">
+			<h:form>
+				<h:outputText value="#{headerBean.name}"></h:outputText>
+				<h:commandLink style="font-size:12px" value="log out" action="#{headerBean.logout()}"></h:commandLink>
+			</h:form>
+		</span>
+		
 	</div>
 </body>
 </html>
