--- a/Medizinplattform/WebContent/templates/template.xhtml
+++ b/Medizinplattform/WebContent/templates/template.xhtml
@@ -11,7 +11,7 @@
 
 <div id="header">
     <ui:insert name="header">
-    	<ui:include src="#{headerBean.header}"/>
+    	<ui:include src="#{userBean.header}"/>
     </ui:insert>
 </div>
 
