--- a/Medizinplattform/WebContent/templates/header_with_name.xhtml
+++ b/Medizinplattform/WebContent/templates/header_with_name.xhtml
@@ -14,8 +14,9 @@
 		
 		<span style="text-align:right;font-size:20px;color:black">
 			<h:form>
-				<h:outputText value="#{headerBean.name}"></h:outputText>
-				<h:commandLink style="font-size:12px" value="log out" action="#{headerBean.logout()}"></h:commandLink>
+				<h:commandLink style="font-size:12px" value="chronicle" action="chronicle.xhtml"></h:commandLink>
+				<h:outputText value="#{userBean.name}"></h:outputText>
+				<h:commandLink style="font-size:12px" value="log out" action="#{loginBean.logout()}"></h:commandLink>
 			</h:form>
 		</span>
 		
