--- a/Medizinplattform/WebContent/templates/header_with_forms.xhtml
+++ b/Medizinplattform/WebContent/templates/header_with_forms.xhtml
@@ -7,7 +7,8 @@
       xmlns:p="http://primefaces.org/ui">
 <body>
 	<div style="width:100%;font-size:12px;line-height:30px;background-color:#E8E8E8  ;color:black">
-		<span style="float:left;font-size:26px">
+		
+		<span style="float:left;font-size:26px;style=color:white">
 			<h:link value="MediPlatt" outcome="index.xhtml"></h:link>
 		</span>
 		<span style="text-align:right">
