--- a/Medizinplattform/WebContent/templates/header_with_name.xhtml
+++ b/Medizinplattform/WebContent/templates/header_with_name.xhtml
@@ -8,7 +8,7 @@
 <body>
 	<div style="width:100%;font-size:12px;line-height:30px;background-color:#E8E8E8  ;color:black">
 		
-		<span style="float:left;font-size:26px">
+		<span style="float:left;font-size:26px;style=color:white">
 			<h:link value="MediPlatt" outcome="index.xhtml"></h:link>
 		</span>
 		
