add roles change users datamodell to support more parameters

--- a/Medizinplattform/WebContent/templates/header_user.xhtml
+++ b/Medizinplattform/WebContent/templates/header_user.xhtml
@@ -11,16 +11,14 @@
 		<span style="float:left;font-size:26px;style=color:white">
 			<h:link value="MediPlatt" outcome="index.xhtml"></h:link>
 		</span>
-		<span style="text-align:right">
-		<h:form>
-            <h:outputText value="Login"></h:outputText>
-			<h:inputText value="#{loginBean.name}"></h:inputText>
-			<h:outputText value="Password"></h:outputText>
-			<h:inputSecret value="#{loginBean.password}"></h:inputSecret>
-			<h:commandButton value="Login" action="#{loginBean.login()}"></h:commandButton>
-			<h:commandLink value="register" action="register"></h:commandLink>
-		</h:form>        
-        </span>
+		
+		<span style="text-align:right;font-size:20px;color:black">
+			<h:form>
+				<h:commandLink style="font-size:12px" value="chronicle" action="chronicle.xhtml?faces-redirect=true"></h:commandLink>
+				<h:outputText value="#{userBean.name}"></h:outputText>
+				<h:commandLink style="font-size:12px" value="log out" action="#{loginBean.logout()}"></h:commandLink>
+			</h:form>
+		</span>
 		
 	</div>
 </body>
