--- a/Medizinplattform/WebContent/templates/template.xhtml
+++ b/Medizinplattform/WebContent/templates/template.xhtml
@@ -14,12 +14,8 @@
     	<ui:include src="#{userBean.header}"/>
     </ui:insert>
 </div>
-
-
 <div id="content">
-  <ui:insert name="content">
-    	
-  </ui:insert>
+  <ui:insert name="content"></ui:insert>
 </div>
 
 <div id="footer">
