Fix forgot_password bug

--- a/Medizinplattform/WebContent/templates/header_guest.xhtml
+++ b/Medizinplattform/WebContent/templates/header_guest.xhtml
@@ -18,8 +18,8 @@
 			<h:outputText value=" Password"></h:outputText>
 			<h:inputSecret value="#{loginBean.password}"></h:inputSecret>
 			<h:commandButton value="Login" action="#{loginBean.login()}"></h:commandButton>
-			<h:commandLink value=" register  " outcome="register.xhtml?faces-redirect=true"></h:commandLink>
-			<h:commandLink value="  forgot password  " outcome="login_fail.xhtml?faces-redirect=true"></h:commandLink>
+			<h:commandLink value=" register  " action="register.xhtml?faces-redirect=true"></h:commandLink>
+			<h:commandLink value="  forgot password  " action="login_fail.xhtml?faces-redirect=true"></h:commandLink>
 		</h:form>        
         </span>
 		
