--- a/Medizinplattform/WebContent/templates/template.xhtml
+++ b/Medizinplattform/WebContent/templates/template.xhtml
@@ -11,9 +11,10 @@
 
 <div id="header">
     <ui:insert name="header">
-    	<ui:include src="#{userBean.header}"/>
+    	<ui:include src="header.xhtml"/>
     </ui:insert>
 </div>
+
 <div id="content">
   <ui:insert name="content"></ui:insert>
 </div>
