add style to admin.xhtml

--- a/Medizinplattform/WebContent/templates/template.xhtml
+++ b/Medizinplattform/WebContent/templates/template.xhtml
@@ -9,7 +9,8 @@
 <h:head>  
   <title><ui:insert name="title">MediPlatt</ui:insert></title>  
   <h:outputStylesheet name="style.css" />
-  <h:outputStylesheet name="registration.css" />    
+  <h:outputStylesheet name="registration.css" />
+  <h:outputStylesheet name="admin.css" />    
 </h:head>
 
 
