--- a/Medizinplattform/WebContent/templates/template.xhtml
+++ b/Medizinplattform/WebContent/templates/template.xhtml
@@ -10,7 +10,8 @@
   <title><ui:insert name="title">MediPlatt</ui:insert></title>  
   <h:outputStylesheet name="style.css" />
   <h:outputStylesheet name="registration.css" />
-  <h:outputStylesheet name="admin.css" />    
+  <h:outputStylesheet name="admin.css" /> 
+  <h:outputStylesheet name="chronicle.css" />
 </h:head>
 
 
