--- a/Medizinplattform/WebContent/resources/chronicle.css
+++ b/Medizinplattform/WebContent/resources/chronicle.css
@@ -7,3 +7,69 @@
 	width:100%;
 	height:100px;
 }
+
+#new-story-form{
+	background-color:blue;
+	width:720px;
+	margin-left:auto;
+	margin-right:auto;
+}
+
+#new-story-form-header{
+	background-color:orange;
+	width:120px;
+	margin-left:32px;
+}
+
+#new-story-form-body{
+	background-color:black;
+	padding:6px;
+}
+
+#new-story-form-content{
+	background-color:white;
+}
+
+#new-story-form-textline{
+	background-color:green;
+	padding:3px;
+}
+
+#new-story-form-command-elements{
+	background-color:green;
+	padding:0px;
+}
+
+#new-story-form-command-elements #t-date{
+	background-color:grey;
+	width:100px;
+}
+
+#new-story-form-command-elements #t-time{
+	background-color:grey;
+	width:400px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
