--- a/Medizinplattform/WebContent/resources/chronicle.css
+++ b/Medizinplattform/WebContent/resources/chronicle.css
@@ -1,10 +1,40 @@
 #new-story-area {
+	
 }
 
 #stories-area {
 	background-color:yellow;
 	width:100%;
 	height:100px;
+}
+
+#new-story-button{
+	margin-right:auto;
+	margin-left:auto;
+	width:162px;
+}
+
+.start-new-story-button {
+    background-color: #dd5f32;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius:3px;
+    color: white;
+    font-family: 'Arial';
+    font-size: 20px;
+    font-weight:bold;
+    text-decoration: none;
+    cursor: poiner;
+    border:none;
+}
+
+
+
+.start-new-story-button:hover {
+    border: none;
+    background:red;
+    box-shadow: 0px 0px 1px #777;
+    
 }
 
 #new-story-form{
