--- a/Medizinplattform/WebContent/templates/chronicle-new-story.xhtml
+++ b/Medizinplattform/WebContent/templates/chronicle-new-story.xhtml
@@ -10,12 +10,18 @@
     
     <div id="new-story-area">
 		<h:form>
-			<div id="new-story-button">
-				<h:panelGroup rendered="#{not chronicleBean.newStoryButtonVisible}">
-					<h:commandButton class ="start-new-story-button" value="Start new story" ></h:commandButton>
-				</h:panelGroup>
-			</div>			
+			<h:panelGroup rendered="#{chronicleBean.newStoryButtonVisible}">
+				<div id="new-story-button">
+					<h:commandButton class ="start-new-story-button" value="start new story" action="#{chronicleBean.gotoOptions()}"></h:commandButton>
+				</div>		
+			</h:panelGroup>	
 			
+			
+			<h:panelGroup rendered="#{chronicleBean.optionsVisible}">
+				<div id="choose-an-option">
+					<h:outputText value="Choose an option"></h:outputText>
+				</div>		
+			</h:panelGroup>
 		</h:form>
 	</div>
     
