trying to exclude options frame to diff file

--- a/Medizinplattform/WebContent/templates/chronicle-new-story.xhtml
+++ b/Medizinplattform/WebContent/templates/chronicle-new-story.xhtml
@@ -19,7 +19,7 @@
 			
 			<h:panelGroup rendered="#{chronicleBean.optionsVisible}">
 				<div id="choose-an-option">
-					<h:outputText value="Choose an option"></h:outputText>
+					<ui:include src="options.xhtml"/>	
 				</div>		
 			</h:panelGroup>
 		</h:form>
