--- a/Medizinplattform/WebContent/templates/options.xhtml
+++ b/Medizinplattform/WebContent/templates/options.xhtml
@@ -6,8 +6,17 @@
 	  xmlns:f="http://java.sun.com/jsf/core">
 
 <ui:composition>
-   
-    
+   <div class="frame">
+		<div class="frame-header">
+			asdf
+		</div>
+		<div class="frame-body">
+			asdffd
+		</div>
+		<div class="frame-footer">
+			ffdaf
+		</div>
+	</div>    
 </ui:composition>
-
+	
 </html>
