--- a/Medizinplattform/WebContent/templates/template.xhtml
+++ b/Medizinplattform/WebContent/templates/template.xhtml
@@ -11,7 +11,8 @@
   <h:outputStylesheet name="style.css" />
   <h:outputStylesheet name="registration.css" />
   <h:outputStylesheet name="admin.css" /> 
-  <h:outputStylesheet name="chronicle.css" />
+  <h:outputStylesheet name="chronicle.css" />  
+  <h:outputStylesheet name="standart-frame.css" />
 </h:head>
 
 
