--- a/Medizinplattform/WebContent/templates/options.xhtml
+++ b/Medizinplattform/WebContent/templates/options.xhtml
@@ -8,13 +8,13 @@
 <ui:composition>
    <div class="frame">
 		<div class="frame-header">
-			What is the starting point of the story?
+			Log-In
 		</div>
 		<div class="frame-body">
 			<table>
 			<tr>
 				<td>
-					<h:commandLink> 
+					<h:commandLink action="#{chronicleBean.gotoSymptomAnket()}"> 
    						<h:graphicImage value="resources/symptom.gif" />
    					</h:commandLink>
 				</td>
