--- a/Medizinplattform/WebContent/resources/css/form-template.css
+++ b/Medizinplattform/WebContent/resources/css/form-template.css
@@ -2,18 +2,20 @@
 	width:100%;
 	border:solid grey 1px;
 	background-color:black;
+	font-weight:bold;
+	font-family:Arial, sans-serif;
 }
+
 .frame-header {
 	background-color:#4298b5;
 	line-height:24px;
-	font-weight:bold;
-	font-family:Arial, sans-serif;
+	
 	padding-left:6px;	
 }
 
 .frame-body {
 	background-color:#adc4cc;
-	text-align:center;
+	padding:12px;
 }
 
 .frame-body table{
@@ -27,12 +29,10 @@
 }
 
 .frame-footer {
+	padding:3px;
 	background-color:#4298b5;
 	text-align:right;
 }
 
-.symptom-img { 
-	width:144px;
-	height:144px;
-	background-image: url('../resources/symptom.gif'); 
-}
+
+
