delete some unused classes

--- a/Medizinplattform/WebContent/templates/template.xhtml
+++ b/Medizinplattform/WebContent/templates/template.xhtml
@@ -24,7 +24,7 @@
   
   <div id="header-content">
     <h:link id="logo" value="MediPlatt" outcome="index.xhtml"></h:link>
-    <div id="nav"><ui:include src="header.xhtml"/></div>    
+    <div id="nav"><ui:include src="../composites/header.xhtml"/></div>    
   </div>
 
 </div>
