now able to create and delete mock entry

--- a/Medizinplattform/WebContent/templates/form_template.xhtml
+++ b/Medizinplattform/WebContent/templates/form_template.xhtml
@@ -14,8 +14,9 @@
 			
 		</div>
 		<div class="frame-body">
-			<ui:insert name="frame-body"></ui:insert>
-			Template body
+			<h:form>
+				<ui:insert name="frame-body">Template body</ui:insert>
+			</h:form>
 		</div>
 		<div class="frame-footer">
 			<h:form>
