--- a/Medizinplattform/WebContent/templates/template.xhtml
+++ b/Medizinplattform/WebContent/templates/template.xhtml
@@ -14,6 +14,9 @@
   <h:outputStylesheet name="css/login.css" />
   <h:outputStylesheet name="css/registration.css" />  
   <h:outputStylesheet name="css/admin.css" />
+  
+  <script type="text/javascript" src="resources/js/login.js" />
+ 
 </h:head>
 
 
