global change of chronicle

--- a/Medizinplattform/WebContent/templates/template.xhtml
+++ b/Medizinplattform/WebContent/templates/template.xhtml
@@ -9,11 +9,14 @@
 <h:head>  
   <title><ui:insert name="title">MediPlatt</ui:insert></title>  
   <h:outputStylesheet name="css/template.css" />
-  <h:outputStylesheet name="css/form-template.css" />
+  <h:outputStylesheet name="css/story.css" />
   <h:outputStylesheet name="css/buttons.css" />
   <h:outputStylesheet name="css/login.css" />
   <h:outputStylesheet name="css/registration.css" />  
-  <h:outputStylesheet name="css/admin.css" /> 
+  <h:outputStylesheet name="css/admin.css" />  
+  <h:outputStylesheet name="css/chronicle.css" /> 
+  <h:outputStylesheet name="css/stories.css" />
+  <h:outputStylesheet name="css/options.css" /> 
 </h:head>
 
 
