--- a/Medizinplattform/WebContent/resources/css/chronicle.css
+++ b/Medizinplattform/WebContent/resources/css/chronicle.css
@@ -1,119 +1,57 @@
-#new-story-area {
+.chronicle{
+	width:1080px;
+	margin:0 auto;
+}
+.chronicle table{
+	width:100%;
 	
 }
 
-#stories-area {
-	background-color:yellow;
-	width:100%;
-	height:100px;
+.chronicle td{
+	
 }
 
-#new-story-button{
-	margin-right:auto;
-	margin-left:auto;
-	width:162px;
+.chronicle .left{
+	width:180px;
 }
-
-#choose-an-option{
-	margin-right:auto;
-	margin-left:auto;
+.chronicle .middle{
 	width:720px;
-	background-color:green;
+}
+.chronicle .right{
+	width:180px;
 }
 
-
-.start-new-story-button {
-    background-color: #dd5f32;
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    border-radius:3px;
-    color: white;
-    font-family: 'Arial';
-    font-size: 20px;
-    font-weight:bold;
-    text-decoration: none;
-    cursor: poiner;
-    border:none;
+.chronicle #top-row .left{
+	vertical-align: middle;
+	text-align: right;
+	padding:12px;
 }
 
-
-
-.start-new-story-button:hover {
-    border: none;
-    background:red;
-    box-shadow: 0px 0px 1px #777;
-    
+.chronicle #top-row .middle{
+	vertical-align: middle;
+	text-align: center;
+	padding:12px;
 }
 
-#new-story-form{
-	width:720px;
-	margin-left:auto;
-	margin-right:auto;
+.chronicle #top-row .right{
+	padding:12px;
 }
 
-#new-story-form-header{
-	background-color:orange;
-	width:120px;
-	margin-left:32px;
-	padding:3px;
+.chronicle #bottom-row .left{
+	vertical-align: top;
+	text-align: right;
+	padding:12px;
 }
 
-#new-story-form-body{
-	background-color:black;
-	padding:6px;
+.chronicle #bottom-row .middle{
+	vertical-align: top;
+	text-align: center;
+	padding:12px;
 }
 
-#new-story-form-content{
-	background-color:white;
+.chronicle #bottom-row .right{
+	vertical-align: top;
+	text-align: left;
+	padding:12px;
 }
-
-#new-story-form-textline{
-	background-color:green;
-	padding:3px;
-}
-
-#new-story-form-command-elements{
-	background-color:green;
-	padding:0px;
-}
-
-#new-story-form-command-elements #t-date{
-	width:70px;
-}
-
-#new-story-form-command-elements #t-time{
-	width:50px;
-}
-#new-story-form-command-elements #t-save{
-	padding-left:455px;
-}
-#new-story-form-command-elements #t-cancel{
-}
-
-.story-area{
-	margin:0px;
-	background-color:purple;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
