updates auf der index seite (logo is nich final...nur mal so) main menü eingefügt, vllt ändere ich noch die knöpfe; header angepasst(belibig erweiterbar) ; css rumgespielt;

--- a/Medizinplattform/WebContent/templates/template.xhtml
+++ b/Medizinplattform/WebContent/templates/template.xhtml
@@ -17,6 +17,8 @@
   <h:outputStylesheet name="css/chronicle.css" /> 
   <h:outputStylesheet name="css/stories.css" />
   <h:outputStylesheet name="css/options.css" /> 
+  <h:outputStylesheet name="css/menu.css" /> 
+  <h:outputStylesheet name="css/cont.css" /> 
 </h:head>
 
 
