Footer fast fertig. Verweise gehen noch nicht.

--- a/Medizinplattform/WebContent/templates/template.xhtml
+++ b/Medizinplattform/WebContent/templates/template.xhtml
@@ -36,6 +36,42 @@
 <div>
 	<ui:insert name="content"></ui:insert>
 </div>
-</h:body>
 
+<!-- #FOOTER -->
+<div id="footer">      
+	<style type="text/css">
+		a.about:link {
+		color:white;
+		}
+		a.impressum:link {
+		color:white;
+		}
+		a.AGB:link {
+		color:white;
+		}
+	</style>            
+            <div id="fixed">
+               
+                  <ul>
+                     <li>
+                        Copyright &copy; 2014
+                     </li>
+                     
+                     <li style="margin-left:13em">
+                        <a class="about" href="index.xhtml" >Über uns</a>
+                     </li>
+                     
+                     <li style="margin-left:3em">
+                        <a class="impressum" href="index.xhtml" >Impressum</a>
+                     </li>
+
+                     <li style="margin-left:3em">
+                        <a class="AGB" href="index.xhtml" >AGB</a>
+                     </li>
+
+                  </ul>
+               
+            </div>
+</div>
+</h:body>
 </html>
