--- a/Medizinplattform/WebContent/resources/css/template.css
+++ b/Medizinplattform/WebContent/resources/css/template.css
@@ -63,3 +63,20 @@ body {
 	height:90vh;
    	width:720px;
 }
+/******FOOTER******/
+#footer {
+	background-color:#92B06A;
+	width:100%;
+	height:46px;
+	position:absolute;
+	bottom:0;
+	left:0;
+}
+
+#fixed {
+    width:1875px;
+    position: fixed;
+    color:white;
+    font-weight:bold;
+    text-align:center;
+}
