--- a/Medizinplattform/WebContent/resources/css/template.css
+++ b/Medizinplattform/WebContent/resources/css/template.css
@@ -1,3 +1,4 @@
+/******HEADER******/
 body {
 	margin:0px;
 	padding:0px;
@@ -7,6 +8,7 @@ body {
 	width:100%;
 	background-color:#92B06A;
 	margin:0px;
+	top:0;
 }
 
 #header-content {
@@ -60,23 +62,24 @@ body {
 	margin-top:0px;
 	margin-bottom:0px;
 	padding:16px;
-	height:90vh;
+	height:150vh;
    	width:720px;
 }
+			
 /******FOOTER******/
 #footer {
 	background-color:#92B06A;
 	width:100%;
 	height:46px;
-	position:absolute;
+	position:fixed;
 	bottom:0;
+	margin:0px;
 	left:0;
 }
 
 #fixed {
-    width:1875px;
-    position: fixed;
-    color:white;
-    font-weight:bold;
-    text-align:center;
+    min-width:400px;
+	color:white;
+	font-weight:bold;
+	text-align:center;
 }
