--- a/Medizinplattform/WebContent/templates/template.xhtml
+++ b/Medizinplattform/WebContent/templates/template.xhtml
@@ -18,7 +18,10 @@
   <h:outputStylesheet name="css/stories.css" />
   <h:outputStylesheet name="css/options.css" /> 
   <h:outputStylesheet name="css/menu.css" /> 
-  <h:outputStylesheet name="css/cont.css" /> 
+  <h:outputStylesheet name="css/cont.css" />
+  <h:outputStylesheet name="css/about.css" />
+  <h:outputStylesheet name="css/haftung.css" />
+  <h:outputStylesheet name="css/impressum.css" />  
 </h:head>
 
 
@@ -54,19 +57,19 @@
                
                   <ul>
                      <li>
-                        Copyright &copy; 2014
+                        &copy; 2014 Mediplatt
                      </li>
                      
-                     <li style="margin-left:13em">
-                        <a class="about" href="index.xhtml" >Über uns</a>
+                     <li style="margin-left:9em">
+                        <a class="about" href="about.xhtml" >Über uns</a>
                      </li>
                      
-                     <li style="margin-left:3em">
-                        <a class="impressum" href="index.xhtml" >Impressum</a>
+                     <li style="margin-left:1em">
+                        <a class="impressum" href="impressum.xhtml" >Impressum</a>
                      </li>
 
-                     <li style="margin-left:3em">
-                        <a class="AGB" href="index.xhtml" >AGB</a>
+                     <li style="margin-left:1em">
+                        <a class="AGB" href="haftung.xhtml" >Haftungsausschluss</a>
                      </li>
 
                   </ul>
