--- a/Medizinplattform/WebContent/templates/template.xhtml
+++ b/Medizinplattform/WebContent/templates/template.xhtml
@@ -58,7 +58,7 @@
                
                   <ul>
                      <li>
-                        &copy; 2014 Mediplatt
+                       Mediplatt &copy; 2014 
                      </li>
                      
                      <li style="margin-left:9em">
