Main eigentlich fertig, vllt denk ich mir noch nen besseren text aus index seite bischen angepasst... sagt ob euch das so gefällt, (da denk ich mir vllt auch noch nen besseren text aus)

--- a/Medizinplattform/WebContent/resources/css/template.css
+++ b/Medizinplattform/WebContent/resources/css/template.css
@@ -26,6 +26,20 @@ body {
 	font-family:Verdana, Geneva, sans-serif;
 	color:white;
 }
+#logo2 {
+	float:center;
+	text-decoration: none;
+	font-size:30px;
+	font-family:Verdana, Geneva, sans-serif;
+	color:#eda933;
+}
+#Schrifft {
+	float:center;
+	text-decoration: none;
+	font-size:30px;
+	font-family:Verdana, Geneva, sans-serif;
+	color:black;
+}
 
 #nav {
 	text-align:right;
