--- a/Medizinplattform/WebContent/templates/template.xhtml
+++ b/Medizinplattform/WebContent/templates/template.xhtml
@@ -16,6 +16,7 @@
   <h:outputStylesheet name="css/registration.css" />  
   <h:outputStylesheet name="css/admin.css" />  
   <h:outputStylesheet name="css/chronicle.css" /> 
+  <h:outputStylesheet name="css/statistics.css" /> 
   <h:outputStylesheet name="css/stories.css" />
   <h:outputStylesheet name="css/options.css" /> 
   <h:outputStylesheet name="css/menu.css" /> 
