--- a/Medizinplattform/WebContent/resources/css/storiesList.css
+++ b/Medizinplattform/WebContent/resources/css/storiesList.css
@@ -9,6 +9,15 @@
 .zentriert {
 	margin: 0 auto;
 	text-align: center;
+	font-size:20px;
+	font-weight:bold;
+	color:#000000;
+}
+#bsch {
+	text-align: center;
+	font-size:20px;
+	font-weight:bold;
+	color:#000000;
 }
 
 table.details tbody tr td {
